# python-backend

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
01_network/: requirements.txt
01_network/learning-scripts/: echo_socket_client.py  echo_socket_server.py  fast_api_server.py
01_network/math-api/: routes.py  utils.py
01_network/math_api/: app.py  services.py
01_network/tests/: test.py
learning/week1/: asgi_client_test.py
learning/week1/learning/: asgi_client_test.py  asgi_test.py  async_test_1.py  async_test_2.py  echo_socket_client.py  echo_socket_server.py
lecture_1/learning-scripts/: async_2.py
lecture_1/math_api/: app.py  routes.py
lecture_2/grpc_example/: README.md  grpc_client.py  grpc_server.py  ping_pb2.py  ping_pb2.pyi  ping_pb2_grpc.py
lecture_2/grpc_example/proto/: ping.proto
lecture_2/online_shop/: main.py
lecture_2/online_shop/store/: __init__.py  models.py  queries.py
lecture_2/rest_example/: main.py
lecture_2/rest_example/store/: __init__.py  (+2 more)
lecture_2/websocket_example/: server.py
lecture_3/hw3/: docker-compose.yml  grafana_dashboard.json  online_shop_api_ddoser.py
lecture_4/learning/: example_async.py  example_parse_qs.py  example_user_registry.py
lecture_4/load_test/: Dockerfile  docker-compose.yml  locustfile.py
lecture_5/: Makefile  docker-compose.yml
lecture_5/kafka/: consumer.py  producer.py
lecture_5/rabbit_mq_direct/: consumer.py  producer.py
lecture_5/rabbit_mq_direct_2/: consumer.py  producer.py
lecture_5/rabbit_mq_fanout/: consumer.py  producer.py
lecture_5/rabbit_mq_topic/: consumer.py  producer.py
src/math_api/: app.py  asgi_math_server.py  routes.py  services.py  utils.py
src/python_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_hw_1.py  test_math_api.py  test_online_shop_api.py  test_rest_pokemon_api.py
(+27 files in other folders)
