[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = "Python Backend course ITMO, fall 2024"
authors = ["deniskirbaba <kirbabadenis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
grpcio = "^1.66.2"
grpcio-tools = "^1.66.2"
websockets = "^13.1"
websocket-client = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
faker = "^30.1.0"
httpx = "^0.27.2"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
